fix spacing above search block

--- a/openscholar/themes/os_basetheme/css/global.forms.css
+++ b/openscholar/themes/os_basetheme/css/global.forms.css
@@ -325,7 +325,7 @@ html.js #user-login-form li.openid-link,
 #search-block-form {
     padding-bottom: 5px;
 }
-.content #search-block-form,
+#content .search-block-form,
 #content #search-block-form {
     margin-top: 2em;
 }
